Add Gemini, fs, parser, usage tracker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "docling>=2.71.0",
+    "google-genai>=0.2.0",
     "httpx>=0.28.1",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
+    "langchain-google-genai>=2.0.0",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
     "opencc>=1.2.0",
@@ -31,6 +33,7 @@ dev = [
     "iprogress>=0.4",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
+    "ruff>=0.14.14",
 ]
 
 [tool.ruff]
