--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,15 @@ name = "llm_harness"
 version = "0.1.0"
 description = "Personal LLM harness"
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.12"
 dependencies = [
     "docling>=2.71.0",
-    "google-genai>=1.61.0",
+    "google-genai>=0.2.0",
     "httpx>=0.28.1",
-    "langchain>=1.2.8",
+    "langchain>=1.2.7",
     "langchain-community>=0.4.1",
-    "langchain-google-genai>=4.2.0",
+    "langchain-google-genai>=2.0.0",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
     "opencc>=1.2.0",
@@ -19,6 +20,14 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "rich>=14.3.2",
+]
+
+[project.optional-dependencies]
+dev = [
+    "iprogress>=0.4",
+    "ipykernel>=7.1.0",
+    "ipywidgets>=8.1.8",
+    "ruff>=0.14.14",
 ]
 
 [build-system]
