Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
 OPENROUTER_API_KEY=sk-or-v1-...
-SCRAPECREATORS_API_KEY=
-
 GEMINI_API_KEY=AI...
-GOOGLE_API_KEY=AI...
-GOOGLE_CSE_ID=
+SCRAPECREATORS_API_KEY=...
+SUPDADATA_API_KEY=sd_...
 
-LANGSMITH_TRACING=true
+LANGSMITH_TRACING=false
 LANGSMITH_API_KEY=
-LANGSMITH_PROJECT=LangChain-Playground
-
-TAVILY_API_KEY=tvly-...
+LANGSMITH_PROJECT=llm-harness
