Add Exa as web search agent

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.12"
 dependencies = [
     "docling>=2.71.0",
+    "exa-py>=2.4.0",
     "google-genai>=0.2.0",
     "langchain>=1.2.7",
     "langchain-google-genai>=2.0.0",
