--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,33 +4,27 @@ version = "0.1.0"
 description = "Personal LLM harness"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.12"
+requires-python = ">=3.14"
 dependencies = [
     "docling>=2.74.0",
     "exa-py>=2.4.0",
     "google-genai>=1.64.0",
+    "httpx>=0.28.1",
     "langchain>=1.2.10",
     "langchain-google-genai>=4.2.1",
     "langchain-openai>=1.1.10",
     "langgraph>=1.0.9",
-    "opencc>=1.2.0",
+    "opencc-python-reimplemented>=0.1.7",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
-    "requests>=2.32.5",
     "rich>=14.3.3",
     "ruff>=0.14.14",
 ]
 
 [project.optional-dependencies]
 image = [
-    "httpx>=0.28.1",
     "ipython>=9.10.0",
     "pillow>=11.3.0",
-]
-dev = [
-    "iprogress>=0.4",
-    "ipykernel>=7.1.0",
-    "ipywidgets>=8.1.8",
 ]
 
 [build-system]
@@ -39,14 +33,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["llm_harness"]
-
-[dependency-groups]
-dev = [
-    "iprogress>=0.4",
-    "ipykernel>=7.1.0",
-    "ipywidgets>=8.1.8",
-    "ruff>=0.14.14",
-]
 
 [tool.ruff]
 line-length = 180
@@ -77,7 +63,6 @@ unfixable = ["DTZ", "S"]
 "__init__.py" = ["F401", "F403"]
 "tests/**/*" = ["S101", "ARG", "T20"]
 "test_*.py" = ["S101", "ARG", "T20"]
-"*.ipynb" = ["T20", "E402"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["package_name"]
