--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ OPENROUTER_API_KEY=sk-or-v1-...
 GEMINI_API_KEY=AI...
 SCRAPECREATORS_API_KEY=...
 SUPDADATA_API_KEY=sd_...
+ARTIFICIALANALYSIS_API_KEY=aa_...
 
 LANGSMITH_TRACING=false
 LANGSMITH_API_KEY=
