--- a/llm-harness-js/package.json
+++ b/llm-harness-js/package.json
@@ -29,6 +29,7 @@
     "@langchain/openrouter": "^0.1.3",
     "exa-js": "^1.7.3",
     "langchain": "^1.2.27",
+    "nodejs-polars": "^0.24.0",
     "opencc-js": "^1.0.5",
     "sharp": "^0.34.4",
     "turndown": "^7.2.0",
